@@ -6,6 +6,7 @@ CHANGES IN CUPS V1.4.3
 	- SECURITY: The scheduler could try responding on a closed client
 	  connection, leading to a crash (STR #3200)
 	- Localization updates (STR #3352, STR #3422)
+	- Setting options in the web interface did not always work (STR #3439)
 	- The scheduler did not use the Get-Job-Attributes policy for a printer
 	  (STR #3431)
 	- The scheduler added two job-name attributes to each job object
